--- a/STM32F051K8.ioc
+++ b/STM32F051K8.ioc
@@ -15,9 +15,23 @@ Mcu.Name=STM32F051K8Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin2=PA15
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin2=PA0
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F051K8Tx
@@ -29,8 +43,37 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Signal=GPXTI10
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.Locked=true
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_SWCLK
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPXTI5
+PA6.Locked=true
+PA6.Signal=GPXTI6
+PA7.Locked=true
+PA7.Signal=GPXTI7
+PA8.Locked=true
+PA8.Signal=GPXTI8
+PA9.Locked=true
+PA9.Signal=GPXTI9
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -43,8 +86,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=../../../../STM32Cube/Repository/STM32Cube_FW_F0_V1.11.4
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F051K8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.4
@@ -87,6 +130,18 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
